Add fix in header picture

--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
                 <p class="title-box__content">A top notch premium quality template for your next web project.</p>
                 <button class="title-box__btn btn">Download <span class="uppercase">free!</span></button>
             </article>
-            <div class="teaser__img-box img-box cell">
-                <figure class="img-box__device-image"></figure>
-            </div>
+            <figure class="teaser__img-box img-box cell"><img src="./images/screen.png"
+                    alt="A screen of tablet displaying website"></figure>
         </div>
     </header>
 
